--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
 	<artifactId>wacprac</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<name>wacprac</name>
 	<repositories>
 		<repository>
